# SDS-CP042-scholarai

advanced/submissions/team-members/art-turner/: .gitignore  README.md  REPORT.md  app.py  pyproject.toml  test_setup.py
advanced/submissions/team-members/art-turner/agents/: __init__.py  critic_agent.py  orchestrator.py  researcher_agent.py  synthesizer_agent.py  topic_splitter.py
advanced/submissions/team-members/art-turner/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
advanced/submissions/team-members/art-turner/models/: __init__.py  report.py
advanced/submissions/team-members/art-turner/tools/: __init__.py  web_search.py
advanced/submissions/team-members/shaheer-airaj/: research_workflow.py
